tests/rosetta/out/Fortran/anti-primes.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:39Z
program anti_primes
  implicit none
    integer :: count
    integer :: i
    integer :: maxDiv
    integer :: line
      integer :: d
        character(len=100) :: s0
  main()
  contains
  recursive integer function countDivisors(n) result(res)
    integer, intent(in) :: n
    if ((n < 2)) then
      res = 1
      return
    end if
    count = 2
    i = 2
    do while (((i <= n) / 2))
      if ((mod(n,i) == 0)) then
        count = (count + 1)
      end if
      i = (i + 1)
    end do
    res = count
    return
  end function countDivisors
  recursive integer function main() result(res)
    print *, 'The first 20 anti-primes are:'
    maxDiv = 0
    count = 0
    n = 1
    line = ''
    do while ((count < 20))
      d = countDivisors(n)
      if ((d > maxDiv)) then
        write(s0,'(G0)') n
        line = (line + s0) // ' '
        maxDiv = d
        count = (count + 1)
      end if
      n = (n + 1)
    end do
    line = line(0+1:(size(line) - 1))
    print *, line
  end function main
end program anti_primes
